More robustness for long menu entries; Fix missing borders in MobileNavigation

--- a/patterns/GlobalNavigation/DesktopNavigation/desktopNavigation.styl
+++ b/patterns/GlobalNavigation/DesktopNavigation/desktopNavigation.styl
@@ -85,7 +85,11 @@ $breakpoint-large = 800px
     align-items center
     padding 0.6rem 0.5rem 0.6rem 0
 
+    span
+      margin-right 0.6rem
+
     .icon
+      flex 0 0 0.8rem
       height 1.3rem
       width 0.8rem
       margin-left auto
