--- a/patterns/GlobalNavigation/MobileNavigation/mobileNavigation.styl
+++ b/patterns/GlobalNavigation/MobileNavigation/mobileNavigation.styl
@@ -66,14 +66,18 @@ $breakpoint-small = 475px
   line-height 1.8rem
   color var(--neutral-90)
 
+  & + &
+    border-top 1px solid var(--neutral-20)
+
+
+  &:last-of-type
+    border-bottom 1px solid var(--neutral-20)
+
   &--main
     font-size 1.6rem
     font-weight var(--font-weight-medium)
     letter-spacing 0.023rem
     padding-left 1.5rem
-
-    &:last-of-type
-      border-bottom 1px solid var(--neutral-20)
 
     &.mobile-navigation__item--no-subcats
       padding-left 3.5rem
@@ -81,14 +85,11 @@ $breakpoint-small = 475px
   &--expanded
     border-bottom 1px solid var(--neutral-20)
 
-  & + &
-    border-top 1px solid var(--neutral-20)
-
 .mobile-navigation__link
   display flex
   align-items center
   justify-content space-between
-  height 3.8rem
+  padding 0.9rem 0
   width 100%
   position relative
 
